# TMA4320-Prosjekt1-Andrihol-Emilyan-Selmahbe

./: .gitignore  LICENCE  README.md  config.yaml  jax_intro.ipynb  pyproject.toml
output/: .gitignore
scripts/: example_nb.ipynb  plot_sensor_data.py  run_data.py  run_fdm.py  run_nn.py  run_pinn.py  viz.py
src/project/: __init__.py  config.py  data.py  fdm.py  loss.py  model.py  optim.py  sampling.py  train.py
tests/: conftest.py  test_data.py  test_fdm.py  test_loss.py  test_model.py  test_train.py
